[package]
name          = "signature_derive"
version       = "0.0.0"
authors       = ["RustCrypto Developers"]
license       = "Apache-2.0 OR MIT"
description   = "Custom derive support for the 'signature' crate"
documentation = "https://docs.rs/signature"
repository    = "https://github.com/RustCrypto/signatures/tree/master/signature-crate/"
readme        = "README.md"
edition       = "2018"
keywords      = ["crypto", "ecdsa", "ed25519", "signature", "signing"]
categories    = ["cryptography", "no-std"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"
synstructure = "0.10"
